# demo-container-logs

./: .gitignore  .npmrc  .pre-commit-config.yaml  .tool-versions  README.md  app.py  cdk.json  cspell.config.yaml  main.py  package.json  pyproject.toml
scripts/: install-deps.sh
